test/y.output
   0  $accept : statements $end

   1  assignment : lhs '=' expression

   2  lhs : member_access
   3      | variable

   4  variable : tIDENTIFIER

   5  statements : empty
   6             | statements statement

   7  statement : class
   8            | expression

   9  expression : message
  10             | block
  11             | call
  12             | assignment opt_nl
  13             | lhs
  14             | literal
  15             | '(' expression rparen

  16  callee : block
  17         | lhs
  18         | literal
  19         | '(' expression ')'

  20  block : '{' opt_nl block_args '|' statements '}'
  21        | '{' statements '}'

  22  block_args : ':' block_arg opt_nl
  23             | block_args ':' block_arg opt_nl
  24             | block_args block_arg_identifier ':' block_arg opt_nl

  25  block_arg : tIDENTIFIER

  26  block_arg_identifier : tIDENTIFIER

  27  call : callee '.'
  28       | callee call_args '.'

  29  call_args : ':' call_arg opt_nl
  30            | call_args ':' call_arg opt_nl
  31            | call_args block_arg_identifier ':' call_arg opt_nl

  32  call_arg : block
  33           | lhs '=' call_arg
  34           | lhs
  35           | literal
  36           | '(' expression ')'

  37  class : tCLASS class_def methods opt_nl tEND opt_nl

  38  class_def : class_name '<' tIDENTIFIER
  39            | class_name

  40  class_name : tIDENTIFIER

  41  methods : empty
  42          | methods opt_nl method

  43  method : class_method
  44         | instance_method

  45  class_method : '+' method_def

  46  instance_method : '-' method_def

  47  method_def : block_arg_identifier block_args method_body
  48             | block_arg_identifier method_body

  49  method_body : '{' statements '}'

  50  member_access : accessable '#' tIDENTIFIER

  51  accessable : lhs
  52             | '(' expression rparen

  53  message : message_receiver call

  54  message_receiver : lhs
  55                   | literal
  56                   | '(' expression ')'

  57  empty :

  58  opt_nl :
  59         | opt_nl '\n'

  60  rparen : opt_nl ')'

  61  literal : tNUMBER
  62          | tSTRING

state 0
	$accept : . statements $end  (0)
	empty : .  (57)

	.  reduce 57

	statements  goto 1
	empty  goto 2


state 1
	$accept : statements . $end  (0)
	statements : statements . statement  (6)

	$end  accept
	tCLASS  shift 3
	tNUMBER  shift 4
	tSTRING  shift 5
	tIDENTIFIER  shift 6
	'('  shift 7
	'{'  shift 8
	.  error

	variable  goto 9
	assignment  goto 10
	expression  goto 11
	lhs  goto 12
	literal  goto 13
	class  goto 14
	member_access  goto 15
	accessable  goto 16
	block  goto 17
	statement  goto 18
	message  goto 19
	call  goto 20
	callee  goto 21
	message_receiver  goto 22


state 2
	statements : empty .  (5)

	.  reduce 5


state 3
	class : tCLASS . class_def methods opt_nl tEND opt_nl  (37)

	tIDENTIFIER  shift 23
	.  error

	class_def  goto 24
	class_name  goto 25


state 4
	literal : tNUMBER .  (61)

	.  reduce 61


state 5
	literal : tSTRING .  (62)

	.  reduce 62


state 6
	variable : tIDENTIFIER .  (4)

	.  reduce 4


state 7
	expression : '(' . expression rparen  (15)
	callee : '(' . expression ')'  (19)
	accessable : '(' . expression rparen  (52)
	message_receiver : '(' . expression ')'  (56)

	tNUMBER  shift 4
	tSTRING  shift 5
	tIDENTIFIER  shift 6
	'('  shift 7
	'{'  shift 8
	.  error

	variable  goto 9
	assignment  goto 10
	expression  goto 26
	lhs  goto 12
	literal  goto 13
	member_access  goto 15
	accessable  goto 16
	block  goto 17
	message  goto 19
	call  goto 20
	callee  goto 21
	message_receiver  goto 22


state 8
	block : '{' . opt_nl block_args '|' statements '}'  (20)
	block : '{' . statements '}'  (21)
	empty : .  (57)
	opt_nl : .  (58)

	tCLASS  reduce 57
	tNUMBER  reduce 57
	tSTRING  reduce 57
	tIDENTIFIER  reduce 57
	'('  reduce 57
	'{'  reduce 57
	'}'  reduce 57
	':'  reduce 58
	'\n'  reduce 58

	statements  goto 27
	empty  goto 2
	opt_nl  goto 28


state 9
	lhs : variable .  (3)

	.  reduce 3


state 10
	expression : assignment . opt_nl  (12)
	opt_nl : .  (58)

	.  reduce 58

	opt_nl  goto 29


state 11
	statement : expression .  (8)

	.  reduce 8


12: reduce/reduce conflict (reduce 13, reduce 54) on tNUMBER
12: reduce/reduce conflict (reduce 13, reduce 54) on tSTRING
12: reduce/reduce conflict (reduce 13, reduce 54) on tIDENTIFIER
12: reduce/reduce conflict (reduce 13, reduce 54) on '('
12: reduce/reduce conflict (reduce 13, reduce 54) on '{'
state 12
	assignment : lhs . '=' expression  (1)
	expression : lhs .  (13)
	callee : lhs .  (17)
	accessable : lhs .  (51)
	message_receiver : lhs .  (54)

	'='  shift 30
	$end  reduce 13
	tCLASS  reduce 13
	tNUMBER  reduce 13
	tSTRING  reduce 13
	tIDENTIFIER  reduce 13
	'('  reduce 13
	')'  reduce 13
	'{'  reduce 13
	'}'  reduce 13
	':'  reduce 17
	'.'  reduce 17
	'#'  reduce 51
	'\n'  reduce 13


13: reduce/reduce conflict (reduce 14, reduce 55) on tNUMBER
13: reduce/reduce conflict (reduce 14, reduce 55) on tSTRING
13: reduce/reduce conflict (reduce 14, reduce 55) on tIDENTIFIER
13: reduce/reduce conflict (reduce 14, reduce 55) on '('
13: reduce/reduce conflict (reduce 14, reduce 55) on '{'
state 13
	expression : literal .  (14)
	callee : literal .  (18)
	message_receiver : literal .  (55)

	$end  reduce 14
	tCLASS  reduce 14
	tNUMBER  reduce 14
	tSTRING  reduce 14
	tIDENTIFIER  reduce 14
	'('  reduce 14
	')'  reduce 14
	'{'  reduce 14
	'}'  reduce 14
	':'  reduce 18
	'.'  reduce 18
	'\n'  reduce 14


state 14
	statement : class .  (7)

	.  reduce 7


state 15
	lhs : member_access .  (2)

	.  reduce 2


state 16
	member_access : accessable . '#' tIDENTIFIER  (50)

	'#'  shift 31
	.  error


state 17
	expression : block .  (10)
	callee : block .  (16)

	$end  reduce 10
	tCLASS  reduce 10
	tNUMBER  reduce 10
	tSTRING  reduce 10
	tIDENTIFIER  reduce 10
	'('  reduce 10
	')'  reduce 10
	'{'  reduce 10
	'}'  reduce 10
	':'  reduce 16
	'.'  reduce 16
	'\n'  reduce 10


state 18
	statements : statements statement .  (6)

	.  reduce 6


state 19
	expression : message .  (9)

	.  reduce 9


state 20
	expression : call .  (11)

	.  reduce 11


state 21
	call : callee . '.'  (27)
	call : callee . call_args '.'  (28)

	':'  shift 32
	'.'  shift 33
	.  error

	call_args  goto 34


state 22
	message : message_receiver . call  (53)

	tNUMBER  shift 4
	tSTRING  shift 5
	tIDENTIFIER  shift 6
	'('  shift 35
	'{'  shift 8
	.  error

	variable  goto 9
	lhs  goto 36
	literal  goto 37
	member_access  goto 15
	accessable  goto 16
	block  goto 38
	call  goto 39
	callee  goto 21


state 23
	class_name : tIDENTIFIER .  (40)

	.  reduce 40


state 24
	class : tCLASS class_def . methods opt_nl tEND opt_nl  (37)
	empty : .  (57)

	.  reduce 57

	methods  goto 40
	empty  goto 41


state 25
	class_def : class_name . '<' tIDENTIFIER  (38)
	class_def : class_name .  (39)

	'<'  shift 42
	tEND  reduce 39
	'+'  reduce 39
	'-'  reduce 39
	'\n'  reduce 39


26: shift/reduce conflict (shift 43, reduce 58) on ')'
state 26
	expression : '(' expression . rparen  (15)
	callee : '(' expression . ')'  (19)
	accessable : '(' expression . rparen  (52)
	message_receiver : '(' expression . ')'  (56)
	opt_nl : .  (58)

	')'  shift 43
	'\n'  reduce 58

	opt_nl  goto 44
	rparen  goto 45


state 27
	statements : statements . statement  (6)
	block : '{' statements . '}'  (21)

	tCLASS  shift 3
	tNUMBER  shift 4
	tSTRING  shift 5
	tIDENTIFIER  shift 6
	'('  shift 7
	'{'  shift 8
	'}'  shift 46
	.  error

	variable  goto 9
	assignment  goto 10
	expression  goto 11
	lhs  goto 12
	literal  goto 13
	class  goto 14
	member_access  goto 15
	accessable  goto 16
	block  goto 17
	statement  goto 18
	message  goto 19
	call  goto 20
	callee  goto 21
	message_receiver  goto 22


state 28
	block : '{' opt_nl . block_args '|' statements '}'  (20)
	opt_nl : opt_nl . '\n'  (59)

	':'  shift 47
	'\n'  shift 48
	.  error

	block_args  goto 49


29: shift/reduce conflict (shift 48, reduce 12) on '\n'
state 29
	expression : assignment opt_nl .  (12)
	opt_nl : opt_nl . '\n'  (59)

	'\n'  shift 48
	$end  reduce 12
	tCLASS  reduce 12
	tNUMBER  reduce 12
	tSTRING  reduce 12
	tIDENTIFIER  reduce 12
	'('  reduce 12
	')'  reduce 12
	'{'  reduce 12
	'}'  reduce 12


state 30
	assignment : lhs '=' . expression  (1)

	tNUMBER  shift 4
	tSTRING  shift 5
	tIDENTIFIER  shift 6
	'('  shift 7
	'{'  shift 8
	.  error

	variable  goto 9
	assignment  goto 10
	expression  goto 50
	lhs  goto 12
	literal  goto 13
	member_access  goto 15
	accessable  goto 16
	block  goto 17
	message  goto 19
	call  goto 20
	callee  goto 21
	message_receiver  goto 22


state 31
	member_access : accessable '#' . tIDENTIFIER  (50)

	tIDENTIFIER  shift 51
	.  error


state 32
	call_args : ':' . call_arg opt_nl  (29)

	tNUMBER  shift 4
	tSTRING  shift 5
	tIDENTIFIER  shift 6
	'('  shift 52
	'{'  shift 8
	.  error

	variable  goto 9
	lhs  goto 53
	literal  goto 54
	member_access  goto 15
	accessable  goto 16
	block  goto 55
	call_arg  goto 56


state 33
	call : callee '.' .  (27)

	.  reduce 27


state 34
	call : callee call_args . '.'  (28)
	call_args : call_args . ':' call_arg opt_nl  (30)
	call_args : call_args . block_arg_identifier ':' call_arg opt_nl  (31)

	tIDENTIFIER  shift 57
	':'  shift 58
	'.'  shift 59
	.  error

	block_arg_identifier  goto 60


state 35
	callee : '(' . expression ')'  (19)
	accessable : '(' . expression rparen  (52)

	tNUMBER  shift 4
	tSTRING  shift 5
	tIDENTIFIER  shift 6
	'('  shift 7
	'{'  shift 8
	.  error

	variable  goto 9
	assignment  goto 10
	expression  goto 61
	lhs  goto 12
	literal  goto 13
	member_access  goto 15
	accessable  goto 16
	block  goto 17
	message  goto 19
	call  goto 20
	callee  goto 21
	message_receiver  goto 22


state 36
	callee : lhs .  (17)
	accessable : lhs .  (51)

	':'  reduce 17
	'.'  reduce 17
	'#'  reduce 51


state 37
	callee : literal .  (18)

	.  reduce 18


state 38
	callee : block .  (16)

	.  reduce 16


state 39
	message : message_receiver call .  (53)

	.  reduce 53


state 40
	class : tCLASS class_def methods . opt_nl tEND opt_nl  (37)
	methods : methods . opt_nl method  (42)
	opt_nl : .  (58)

	.  reduce 58

	opt_nl  goto 62


state 41
	methods : empty .  (41)

	.  reduce 41


state 42
	class_def : class_name '<' . tIDENTIFIER  (38)

	tIDENTIFIER  shift 63
	.  error


state 43
	callee : '(' expression ')' .  (19)
	message_receiver : '(' expression ')' .  (56)

	tNUMBER  reduce 56
	tSTRING  reduce 56
	tIDENTIFIER  reduce 56
	'('  reduce 56
	'{'  reduce 56
	':'  reduce 19
	'.'  reduce 19


state 44
	opt_nl : opt_nl . '\n'  (59)
	rparen : opt_nl . ')'  (60)

	')'  shift 64
	'\n'  shift 48
	.  error


state 45
	expression : '(' expression rparen .  (15)
	accessable : '(' expression rparen .  (52)

	$end  reduce 15
	tCLASS  reduce 15
	tNUMBER  reduce 15
	tSTRING  reduce 15
	tIDENTIFIER  reduce 15
	'('  reduce 15
	')'  reduce 15
	'{'  reduce 15
	'}'  reduce 15
	'#'  reduce 52
	'\n'  reduce 15


state 46
	block : '{' statements '}' .  (21)

	.  reduce 21


state 47
	block_args : ':' . block_arg opt_nl  (22)

	tIDENTIFIER  shift 65
	.  error

	block_arg  goto 66


state 48
	opt_nl : opt_nl '\n' .  (59)

	.  reduce 59


state 49
	block : '{' opt_nl block_args . '|' statements '}'  (20)
	block_args : block_args . ':' block_arg opt_nl  (23)
	block_args : block_args . block_arg_identifier ':' block_arg opt_nl  (24)

	tIDENTIFIER  shift 57
	'|'  shift 67
	':'  shift 68
	.  error

	block_arg_identifier  goto 69


state 50
	assignment : lhs '=' expression .  (1)

	.  reduce 1


state 51
	member_access : accessable '#' tIDENTIFIER .  (50)

	.  reduce 50


state 52
	call_arg : '(' . expression ')'  (36)
	accessable : '(' . expression rparen  (52)

	tNUMBER  shift 4
	tSTRING  shift 5
	tIDENTIFIER  shift 6
	'('  shift 7
	'{'  shift 8
	.  error

	variable  goto 9
	assignment  goto 10
	expression  goto 70
	lhs  goto 12
	literal  goto 13
	member_access  goto 15
	accessable  goto 16
	block  goto 17
	message  goto 19
	call  goto 20
	callee  goto 21
	message_receiver  goto 22


state 53
	call_arg : lhs . '=' call_arg  (33)
	call_arg : lhs .  (34)
	accessable : lhs .  (51)

	'='  shift 71
	tIDENTIFIER  reduce 34
	':'  reduce 34
	'.'  reduce 34
	'#'  reduce 51
	'\n'  reduce 34


state 54
	call_arg : literal .  (35)

	.  reduce 35


state 55
	call_arg : block .  (32)

	.  reduce 32


state 56
	call_args : ':' call_arg . opt_nl  (29)
	opt_nl : .  (58)

	.  reduce 58

	opt_nl  goto 72


state 57
	block_arg_identifier : tIDENTIFIER .  (26)

	.  reduce 26


state 58
	call_args : call_args ':' . call_arg opt_nl  (30)

	tNUMBER  shift 4
	tSTRING  shift 5
	tIDENTIFIER  shift 6
	'('  shift 52
	'{'  shift 8
	.  error

	variable  goto 9
	lhs  goto 53
	literal  goto 54
	member_access  goto 15
	accessable  goto 16
	block  goto 55
	call_arg  goto 73


state 59
	call : callee call_args '.' .  (28)

	.  reduce 28


state 60
	call_args : call_args block_arg_identifier . ':' call_arg opt_nl  (31)

	':'  shift 74
	.  error


61: shift/reduce conflict (shift 75, reduce 58) on ')'
state 61
	callee : '(' expression . ')'  (19)
	accessable : '(' expression . rparen  (52)
	opt_nl : .  (58)

	')'  shift 75
	'\n'  reduce 58

	opt_nl  goto 44
	rparen  goto 76


state 62
	class : tCLASS class_def methods opt_nl . tEND opt_nl  (37)
	methods : methods opt_nl . method  (42)
	opt_nl : opt_nl . '\n'  (59)

	tEND  shift 77
	'+'  shift 78
	'-'  shift 79
	'\n'  shift 48
	.  error

	method  goto 80
	class_method  goto 81
	instance_method  goto 82


state 63
	class_def : class_name '<' tIDENTIFIER .  (38)

	.  reduce 38


state 64
	rparen : opt_nl ')' .  (60)

	.  reduce 60


state 65
	block_arg : tIDENTIFIER .  (25)

	.  reduce 25


state 66
	block_args : ':' block_arg . opt_nl  (22)
	opt_nl : .  (58)

	.  reduce 58

	opt_nl  goto 83


state 67
	block : '{' opt_nl block_args '|' . statements '}'  (20)
	empty : .  (57)

	.  reduce 57

	statements  goto 84
	empty  goto 2


state 68
	block_args : block_args ':' . block_arg opt_nl  (23)

	tIDENTIFIER  shift 65
	.  error

	block_arg  goto 85


state 69
	block_args : block_args block_arg_identifier . ':' block_arg opt_nl  (24)

	':'  shift 86
	.  error


70: shift/reduce conflict (shift 87, reduce 58) on ')'
state 70
	call_arg : '(' expression . ')'  (36)
	accessable : '(' expression . rparen  (52)
	opt_nl : .  (58)

	')'  shift 87
	'\n'  reduce 58

	opt_nl  goto 44
	rparen  goto 76


state 71
	call_arg : lhs '=' . call_arg  (33)

	tNUMBER  shift 4
	tSTRING  shift 5
	tIDENTIFIER  shift 6
	'('  shift 52
	'{'  shift 8
	.  error

	variable  goto 9
	lhs  goto 53
	literal  goto 54
	member_access  goto 15
	accessable  goto 16
	block  goto 55
	call_arg  goto 88


state 72
	call_args : ':' call_arg opt_nl .  (29)
	opt_nl : opt_nl . '\n'  (59)

	'\n'  shift 48
	tIDENTIFIER  reduce 29
	':'  reduce 29
	'.'  reduce 29


state 73
	call_args : call_args ':' call_arg . opt_nl  (30)
	opt_nl : .  (58)

	.  reduce 58

	opt_nl  goto 89


state 74
	call_args : call_args block_arg_identifier ':' . call_arg opt_nl  (31)

	tNUMBER  shift 4
	tSTRING  shift 5
	tIDENTIFIER  shift 6
	'('  shift 52
	'{'  shift 8
	.  error

	variable  goto 9
	lhs  goto 53
	literal  goto 54
	member_access  goto 15
	accessable  goto 16
	block  goto 55
	call_arg  goto 90


state 75
	callee : '(' expression ')' .  (19)

	.  reduce 19


state 76
	accessable : '(' expression rparen .  (52)

	.  reduce 52


state 77
	class : tCLASS class_def methods opt_nl tEND . opt_nl  (37)
	opt_nl : .  (58)

	.  reduce 58

	opt_nl  goto 91


state 78
	class_method : '+' . method_def  (45)

	tIDENTIFIER  shift 57
	.  error

	block_arg_identifier  goto 92
	method_def  goto 93


state 79
	instance_method : '-' . method_def  (46)

	tIDENTIFIER  shift 57
	.  error

	block_arg_identifier  goto 92
	method_def  goto 94


state 80
	methods : methods opt_nl method .  (42)

	.  reduce 42


state 81
	method : class_method .  (43)

	.  reduce 43


state 82
	method : instance_method .  (44)

	.  reduce 44


state 83
	block_args : ':' block_arg opt_nl .  (22)
	opt_nl : opt_nl . '\n'  (59)

	'\n'  shift 48
	tIDENTIFIER  reduce 22
	'{'  reduce 22
	'|'  reduce 22
	':'  reduce 22


state 84
	statements : statements . statement  (6)
	block : '{' opt_nl block_args '|' statements . '}'  (20)

	tCLASS  shift 3
	tNUMBER  shift 4
	tSTRING  shift 5
	tIDENTIFIER  shift 6
	'('  shift 7
	'{'  shift 8
	'}'  shift 95
	.  error

	variable  goto 9
	assignment  goto 10
	expression  goto 11
	lhs  goto 12
	literal  goto 13
	class  goto 14
	member_access  goto 15
	accessable  goto 16
	block  goto 17
	statement  goto 18
	message  goto 19
	call  goto 20
	callee  goto 21
	message_receiver  goto 22


state 85
	block_args : block_args ':' block_arg . opt_nl  (23)
	opt_nl : .  (58)

	.  reduce 58

	opt_nl  goto 96


state 86
	block_args : block_args block_arg_identifier ':' . block_arg opt_nl  (24)

	tIDENTIFIER  shift 65
	.  error

	block_arg  goto 97


state 87
	call_arg : '(' expression ')' .  (36)

	.  reduce 36


state 88
	call_arg : lhs '=' call_arg .  (33)

	.  reduce 33


state 89
	call_args : call_args ':' call_arg opt_nl .  (30)
	opt_nl : opt_nl . '\n'  (59)

	'\n'  shift 48
	tIDENTIFIER  reduce 30
	':'  reduce 30
	'.'  reduce 30


state 90
	call_args : call_args block_arg_identifier ':' call_arg . opt_nl  (31)
	opt_nl : .  (58)

	.  reduce 58

	opt_nl  goto 98


state 91
	class : tCLASS class_def methods opt_nl tEND opt_nl .  (37)
	opt_nl : opt_nl . '\n'  (59)

	'\n'  shift 48
	$end  reduce 37
	tCLASS  reduce 37
	tNUMBER  reduce 37
	tSTRING  reduce 37
	tIDENTIFIER  reduce 37
	'('  reduce 37
	'{'  reduce 37
	'}'  reduce 37


state 92
	method_def : block_arg_identifier . block_args method_body  (47)
	method_def : block_arg_identifier . method_body  (48)

	'{'  shift 99
	':'  shift 47
	.  error

	block_args  goto 100
	method_body  goto 101


state 93
	class_method : '+' method_def .  (45)

	.  reduce 45


state 94
	instance_method : '-' method_def .  (46)

	.  reduce 46


state 95
	block : '{' opt_nl block_args '|' statements '}' .  (20)

	.  reduce 20


state 96
	block_args : block_args ':' block_arg opt_nl .  (23)
	opt_nl : opt_nl . '\n'  (59)

	'\n'  shift 48
	tIDENTIFIER  reduce 23
	'{'  reduce 23
	'|'  reduce 23
	':'  reduce 23


state 97
	block_args : block_args block_arg_identifier ':' block_arg . opt_nl  (24)
	opt_nl : .  (58)

	.  reduce 58

	opt_nl  goto 102


state 98
	call_args : call_args block_arg_identifier ':' call_arg opt_nl .  (31)
	opt_nl : opt_nl . '\n'  (59)

	'\n'  shift 48
	tIDENTIFIER  reduce 31
	':'  reduce 31
	'.'  reduce 31


state 99
	method_body : '{' . statements '}'  (49)
	empty : .  (57)

	.  reduce 57

	statements  goto 103
	empty  goto 2


state 100
	block_args : block_args . ':' block_arg opt_nl  (23)
	block_args : block_args . block_arg_identifier ':' block_arg opt_nl  (24)
	method_def : block_arg_identifier block_args . method_body  (47)

	tIDENTIFIER  shift 57
	'{'  shift 99
	':'  shift 68
	.  error

	block_arg_identifier  goto 69
	method_body  goto 104


state 101
	method_def : block_arg_identifier method_body .  (48)

	.  reduce 48


state 102
	block_args : block_args block_arg_identifier ':' block_arg opt_nl .  (24)
	opt_nl : opt_nl . '\n'  (59)

	'\n'  shift 48
	tIDENTIFIER  reduce 24
	'{'  reduce 24
	'|'  reduce 24
	':'  reduce 24


state 103
	statements : statements . statement  (6)
	method_body : '{' statements . '}'  (49)

	tCLASS  shift 3
	tNUMBER  shift 4
	tSTRING  shift 5
	tIDENTIFIER  shift 6
	'('  shift 7
	'{'  shift 8
	'}'  shift 105
	.  error

	variable  goto 9
	assignment  goto 10
	expression  goto 11
	lhs  goto 12
	literal  goto 13
	class  goto 14
	member_access  goto 15
	accessable  goto 16
	block  goto 17
	statement  goto 18
	message  goto 19
	call  goto 20
	callee  goto 21
	message_receiver  goto 22


state 104
	method_def : block_arg_identifier block_args method_body .  (47)

	.  reduce 47


state 105
	method_body : '{' statements '}' .  (49)

	.  reduce 49


Rules never reduced:
	message_receiver : lhs  (54)
	message_receiver : literal  (55)


State 12 contains 5 reduce/reduce conflicts.
State 13 contains 5 reduce/reduce conflicts.
State 26 contains 1 shift/reduce conflict.
State 29 contains 1 shift/reduce conflict.
State 61 contains 1 shift/reduce conflict.
State 70 contains 1 shift/reduce conflict.


20 terminals, 32 nonterminals
63 grammar rules, 106 states
